Move account info to right, add file list, fix spacing on about page

--- a/frontend/src/about.scss
+++ b/frontend/src/about.scss
@@ -32,3 +32,7 @@
     color: hsla(0,0%,100%,.6);;
     font-size: 50%;
 }
+
+.doc-spacing {
+    height: 1rem;
+}
